# pgx_json_schema

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  pgx_json_schema.control
sql/: load-order.txt  pgx_json_schema-1.0.sql
src/: avro.rs  json_schema.rs  json_type_def.rs  lib.rs
