[package]
name = "pgx_json_schema"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg11"]
pg10 = ["pgx/pg10"]
pg11 = ["pgx/pg11"]
pg12 = ["pgx/pg12"]
pg13 = ["pgx/pg13"]
pg_test = []

[dependencies]
pgx = "0.1.20"
pgx-macros = "0.1.20"
serde_json = "1.0.59"
jsonschema = "0.12.0"
jtd = "0.3"
avro-rs = "0.13.0"

[dev-dependencies]
pgx-tests = "0.1.20"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
